# PhDPlanner

./: .gitattributes  .gitignore  index.html  package-lock.json  package.json  setup_instructions.md
src/: App.css  App.tsx  component-exports.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: CalendarView.tsx  ModalComponents.tsx  ProjectDetail.tsx  ProjectList.tsx  SearchBar.tsx  Sidebar.tsx
src/lib/: database.ts
