[package]
name = "phd-project-manager"
version = "0.1.0"
description = "A local-first desktop app for managing PhD projects"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core Tauri v2
tauri = { version = "2", features = [] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
reqwest = { version = "0.11", features = ["json", "gzip", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Plugins (v2)
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"

# Optional — only if you actually use it in code
webbrowser = "0.8"

[features]
# Used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
